# yt-playlist

./: .gitignore  AGENTS.md  Cargo.toml  PKGBUILD  justfile
.context/: business-rules.md  cucumber-tests.md  services.md  style-guide.md  tui.md
crates/marked-path/: Cargo.toml
crates/marked-path/src/: lib.rs  marked_path.rs
crates/shownotes/: Cargo.toml
crates/shownotes/migrations/: 20260311000000_playlist_db.sql  20260319000000_virtual_files_workspace.sql
crates/shownotes/src/: app.rs  lib.rs  services.rs  system_ctx.rs
crates/shownotes/src/cli/: action.rs  generate.rs  mod.rs  tui.rs
crates/shownotes/src/cli/notes/: add.rs  fuzzy.rs  mod.rs  search.rs
crates/shownotes/src/cli/sources/: add.rs  common.rs  edit.rs  mod.rs
crates/shownotes/src/command/: generate.rs  launcher.rs  mod.rs  mpv.rs  notes.rs  output.rs  playlist.rs  sources.rs  tui.rs
crates/shownotes/src/common/: domain.rs  mod.rs
crates/shownotes/src/feat/: external_editor.rs  media_duration_analysis.rs  media_query.rs  mod.rs  symlink.rs
crates/shownotes/src/feat/action_handler/: edit.rs  external.rs  general.rs  mod.rs  navigation.rs  playlist.rs
crates/shownotes/src/feat/commands/: generate.rs  mod.rs  notes.rs  sources.rs
crates/shownotes/src/feat/config/: mod.rs
crates/shownotes/src/feat/external_editor/: mod.rs  test.rs
crates/shownotes/src/feat/external_editor/editors/: fake.rs  mod.rs  system.rs
crates/shownotes/src/feat/fuzzy_search/: mod.rs
crates/shownotes/src/feat/fuzzy_search/backend/: mod.rs  skim.rs
crates/shownotes/src/feat/generate_show_notes/: mod.rs
crates/shownotes/src/feat/generate_show_notes/format/: html.rs  markdown.rs  mod.rs  plain.rs  youtube.rs
crates/shownotes/src/feat/keymap/: action.rs  group_builder.rs  key.rs  map.rs  mod.rs  node.rs
crates/shownotes/src/feat/launcher/: mod.rs  xdg.rs
crates/shownotes/src/feat/media_query/: mod.rs
crates/shownotes/src/feat/media_query/providers/: cached.rs  fake.rs  ffprobe.rs  mod.rs
crates/shownotes/src/feat/mpv/: mod.rs
crates/shownotes/src/feat/mpv/clients/: mod.rs  mpv_ipc.rs  real_launcher.rs
crates/shownotes/src/feat/note_db/: mod.rs
crates/shownotes/src/feat/note_db/backend/: mod.rs  sqlite.rs
crates/shownotes/src/feat/path_resolver/: mod.rs
crates/shownotes/src/feat/path_resolver/backend/: mod.rs  system.rs
crates/shownotes/src/feat/playlist/: mod.rs
crates/shownotes/src/feat/playlist/storage/: fake.rs  mod.rs  sqlite.rs  toml.rs
crates/shownotes/src/feat/sources/: mod.rs
crates/shownotes/src/feat/sources/db/: mod.rs  sqlite.rs
crates/shownotes/src/feat/terminal/: mod.rs
crates/shownotes/src/feat/tracing/: mod.rs
crates/shownotes/src/test_utils/: context.rs  fakes.rs  fixtures.rs  mod.rs  services.rs
crates/shownotes/src/tui/: commands.rs  common.rs  component.rs  error_popup.rs  event.rs  filter.rs  global_key_handler.rs  library_pane.rs  mod.rs  playlist_pane.rs  rename.rs  render.rs  state.rs  status_bar.rs  tui_action.rs  url_input.rs  which_key.rs
crates/shownotes/src/tui/action_handler/: edit.rs  external.rs  general.rs  mod.rs  navigation.rs  playlist.rs
migrations/: 20260304000000_init.sql  20260308000000_sources.sql
src/: analysis.rs  app.rs  cache.rs  config.rs  keymap.rs  launcher.rs  lib.rs  media.rs  mpv.rs  playlist.rs  services.rs  tui_state.rs  ui.rs
src/cli/: action.rs  generate.rs  mod.rs  notes.rs  sources.rs  tui.rs  utils.rs
src/cli/notes/: add.rs  mod.rs  symlink.rs
src/cli/sources/: list.rs  mod.rs
src/feat/: external_editor.rs  generate_show_notes.rs  launcher.rs  media_duration_analysis.rs  mod.rs  mpv.rs  playlist.rs
src/feat/external_editor/: test.rs
src/feat/fuzzy_search/: mod.rs
src/feat/fuzzy_search/backend/: mod.rs  skim.rs
src/feat/generate_show_notes/: mod.rs
src/feat/generate_show_notes/format/: html.rs  plain.rs
src/feat/keymap/: group_builder.rs  key.rs  map.rs  mod.rs  node.rs
src/feat/launcher/: file.rs  mod.rs  xdg.rs
src/feat/note_db/: mod.rs
src/feat/note_db/backend/: mod.rs  sqlite.rs
src/feat/path_resolver/: mod.rs
src/feat/path_resolver/backend/: mod.rs  system.rs
src/feat/sources/: mod.rs
src/feat/sources/db/: sqlite.rs
src/feat/terminal/: mod.rs
src/format/: html.rs  markdown.rs  mod.rs  plain.rs
src/notes/: mod.rs
src/notes/db/: mod.rs  sqlite.rs
src/notes/editor/: mod.rs
src/notes/path/: mod.rs
src/sources/: mod.rs
src/sources/db/: mod.rs  sqlite.rs
src/tui/: filter.rs  mod.rs  playlist_pane.rs  state.rs  url_input.rs  which_key.rs
src/ui/: common.rs  directory_pane.rs  error_popup.rs  filter.rs  library_pane.rs  mod.rs  playlist_pane.rs  rename.rs  which_key.rs
tests/: acceptance.rs
tests/acceptance/: Cargo.toml
tests/acceptance/src/: lib.rs
tests/acceptance/tests/: alias_deletion.rs  alias_notes.rs  generate_show_notes.rs  notes_cli.rs  playlist_persistence.rs  sources_basic.rs  symlinks.rs  which_key_popup.rs
tests/acceptance/tests/features/: alias_deletion.feature  alias_to_notes.feature  generate_show_notes.feature  notes_cli.feature  playlist_persistence.feature  sources_basic.feature  sources_symlinks.feature  which_key_popup.feature
