[package]
name = "mpv-playlist"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
collapsible_if = "allow"
default_constructed_unit_structs = "allow"
enum_glob_use = "allow"
match_wildcard_for_single_variants = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
single_match = "allow"
single_match_else = "allow"
wildcard_imports = "allow"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
derive_more = { version = "2", features = ["debug"] }
error-stack = { version = "0.6.0", features = ["serde"] }
ffprobe = "0.4"
futures-util = "0.3"
mpvipc = "1.3"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
wherror = "2.3.1"
fuzzy-matcher = "0.3"
sysinfo = "0.38"

[dev-dependencies]
rstest = "0.24"
tempfile = "3.26.0"
