[workspace]
resolver = "3"
members = ["crates/*", "tests/*"]

[workspace.dependencies]
async-trait = "0.1.89"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
derive_more = { version = "2", features = ["debug"] }
dialoguer = "0.12.0"
dirs = "6"
error-stack = { version = "0.6.0", features = ["serde"] }
ffprobe = "0.4"
futures = "0.3.32"
futures-util = "0.3"
infer = "0.16"
mpvipc = "1.3"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-escape = "0.1"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "derive",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
wherror = "2.3.1"
fuzzy-matcher = "0.3"
sysinfo = "0.38"
arboard = { version = "3", default-features = false, features = [
    "wayland-data-control",
] }
rstest = "0.24"
tempfile = "3.26.0"
temptree = "0.2"
cucumber = "0.21"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
collapsible_if = "allow"
default_constructed_unit_structs = "allow"
doc_markdown = "allow"
enum_glob_use = "allow"
match_wildcard_for_single_variants = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
single_match = "allow"
single_match_else = "allow"
wildcard_imports = "allow"
