[package]
name = "shownotes"
version = "0.6.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
crossterm = { workspace = true }
derive_more = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
error-stack = { workspace = true }
ffprobe = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
infer = { workspace = true }
jiff = { workspace = true }
mpvipc = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-escape = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wherror = { workspace = true }
fuzzy-matcher = { workspace = true }
sysinfo = { workspace = true }
marked-path = { workspace = true }
arboard = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
temptree = { workspace = true }
serial_test = { workspace = true }
