[package]
name = "acceptance"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
shownotes = { path = "../../crates/shownotes" }
cucumber = { workspace = true }
crossterm = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
marked-path = { workspace = true }

[[test]]
name = "symlinks"
harness = false

[[test]]
name = "alias_notes"
harness = false

[[test]]
name = "alias_deletion"
harness = false

[[test]]
name = "sources_basic"
harness = false

[[test]]
name = "playlist_persistence"
harness = false

[[test]]
name = "notes_cli"
harness = false

[[test]]
name = "generate_show_notes"
harness = false

[[test]]
name = "which_key_popup"
harness = false
